--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,7 +22,7 @@
 {{ end }}
 
 <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Inconsolata%7COpen+Sans%7CConcert+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Inconsolata%7COpen+Sans%7CMontserrat" rel="stylesheet">
 
 <!-- Google Analytics -->
 {{ with .Site.Params.GoogleAnalytics }}
