--- a/static/css/nix.css
+++ b/static/css/nix.css
@@ -40,7 +40,8 @@ nav {
 }
 
 h1,h2,h3,h4,h5,h6 {
-	font-family: 'Concert One', cursive;
+	font-family: 'Montserrat';
+	font-weight: bold;
 }
 
 #user-name {
@@ -72,6 +73,22 @@ h1,h2,h3,h4,h5,h6 {
 i {
 	margin: 10px 20px 10px 20px;
 	color: #333;
+}
+
+.fa-twitter:hover {
+	color: #38A1F3;
+}
+
+.fa-linkedin:hover {
+	color: #2867B2;
+}
+
+.fa-envelope:hover {
+	color: #D44638;
+}
+
+.fa-github:hover {
+	color: deeppink;
 }
 
 .post-link {
