--- a/static/css/nix.css
+++ b/static/css/nix.css
@@ -35,6 +35,15 @@ nav {
 	font-size: 1.5em;
 }
 
+.navbar-inverse {
+	background-color: #fac0e1;
+	border-bottom-color: #fac0e1;
+}
+
+.navbar-inverse li a {
+	color: #333;
+}
+
 .dropdown-menu li {
 	font-size: 1.5em;
 }
@@ -52,7 +61,7 @@ h1,h2,h3,h4,h5,h6 {
 .user-description {
 	border-style: solid;
 	border-width: 5px;
-	border-color: #292929;
+	border-color: #caa5f1;
 	margin-top: 20px;
 	margin-bottom: 1em;
 	padding: 15px;
@@ -66,7 +75,7 @@ h1,h2,h3,h4,h5,h6 {
 .user-picture {
 	border-style: solid;
 	border-width: 5px;
-	border-color: #292929;
+	border-color: #333;
 	margin-top: 20px;
 }
 
