--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,19 +1,25 @@
 {{ with .Site.Params.TwitterID }}
-<a href="https://twitter.com/{{.}}" target="_blank" rel="me" title="Twitter"><i class="fab fa-twitter fa-3x" aria-hidden="true"></i></a>
+<a href="https://twitter.com/{{.}}" target="_blank" rel="me" title="Twitter"><i
+        class="fab fa-twitter fa-3x" aria-hidden="true"></i></a>
 {{ end }}
 {{ with .Site.Params.Medium }}
-<a href="https://medium.com/@{{.}}" target="_blank" rel="me" title="Medium"><i class="fab fa-medium fa-3x" aria-hidden="true"></i></a>
+<a href="https://medium.com/@{{.}}" target="_blank" rel="me" title="Medium"><i
+        class="fab fa-medium fa-3x" aria-hidden="true"></i></a>
 {{ end }}
 {{ with .Site.Params.GithubID }}
-<a href="https://github.com/{{.}}" target="_blank" rel="me" title="GitHub"><i class="fab fa-github fa-3x" aria-hidden="true"></i></a>
+<a href="https://github.com/{{.}}" target="_blank" rel="me" title="GitHub"><i
+        class="fab fa-github fa-3x" aria-hidden="true"></i></a>
 {{ end }}
-{{ with .Site.Params.Podcast }}
-<a href="{{.}}" target="_blank" rel="me" title="Podcast"><i class="fas fa-podcast fa-3x" aria-hidden="true"></i></a>{{ end }}
 {{ with .Site.Params.Sketchnoting }}
-<a href="{{.}}" target="_blank" rel="me" title="Sketchnoting"><i class="fas fa-paint-brush fa-3x" aria-hidden="true"></i></a>{{ end }}
+<a href="{{.}}" target="_blank" rel="me" title="Sketchnoting"><i class="fas fa-paint-brush fa-3x"
+                                                                 aria-hidden="true"></i></a>{{ end }}
+{{ with .Site.Params.Podcast }}
+<a href="{{.}}" target="_blank" rel="me" title="Podcast"><i class="fas fa-podcast fa-3x"
+                                                            aria-hidden="true"></i></a>{{ end }}
 {{ with .Site.Params.Email }}
 <a href="mailto:{{.}}" title="Email"><i class="fas fa-envelope fa-3x" aria-hidden="true"></i></a>
 {{ end }}
 {{ with .Site.Params.LinkedInID }}
-<a href="https://linkedin.com/in/{{.}}" target="_blank" rel="me" title="LinkedIn"><i class="fab fa-linkedin fa-3x" aria-hidden="true"></i></a>
+<a href="https://linkedin.com/in/{{.}}" target="_blank" rel="me" title="LinkedIn"><i
+        class="fab fa-linkedin fa-3x" aria-hidden="true"></i></a>
 {{ end }}
