--- a/static/css/nix.css
+++ b/static/css/nix.css
@@ -49,7 +49,7 @@ nav {
 }
 
 h1,h2,h3,h4,h5,h6 {
-	font-family: 'Montserrat';
+	font-family: 'Montserrat', sans-serif;
 	font-weight: bold;
 }
 
@@ -61,11 +61,12 @@ h1,h2,h3,h4,h5,h6 {
 .user-description {
 	border-style: solid;
 	border-width: 5px;
-	border-color: #caa5f1;
+	border-color: #fac0e1;
 	margin-top: 20px;
 	margin-bottom: 1em;
 	padding: 15px;
 	font-size: initial;
+	font-family: 'Montserrat', sans-serif;
 }
 
 .user-profile {
