--- a/static/css/nix.css
+++ b/static/css/nix.css
@@ -31,8 +31,8 @@ nav {
 }
 
 .navbar-inverse {
-	background-color: #fac0e1;
-	border-bottom-color: #fac0e1;
+	background-color: #fcbad3;
+	border-bottom-color: #fcbad3;
 }
 
 .navbar-inverse .navbar-brand {
@@ -65,7 +65,7 @@ h1,h2,h3,h4,h5,h6 {
 .user-description {
 	border-style: solid;
 	border-width: 5px;
-	border-color: #fac0e1;
+	border-color: #fcbad3;
 	margin-top: 20px;
 	margin-bottom: 1em;
 	padding: 15px;
